ping-pong/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: mypvc
      containers:
        - name: logoutput
          image: k3s-default-registry:5000/ping-pong:v0.5
          resources:
            limits:
              cpu: 50m
              memory: 64M
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
