ping-pong/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2345
      targetPort: 3000
      protocol: TCP
