ping-pong/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/pingpong"
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2345
